refactor: StreamChangedEvent로 이벤트 발행 로직 통합
- StreamStartedEvent와 StreamStoppedEvent를 StreamChangedEvent로 대체
- 이벤트 발행 시 중복 로직 제거 및 간소화
- 관련 테스트 리팩토링 및 ArgumentCaptor로 이벤트 데이터 검증 추가
- 불필요한 테스트 및 import 정리, 코드 가독성 개선